--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.4",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "sanitize-html": "^2.11.0",
     "sequelize": "^6.32.1",
     "supertest": "^6.3.3",
     "url": "^0.11.1"
